--**************************************
-- Cabal build system for AMQP
--**************************************
Name:           AMQP
Version:        0.0.1
Cabal-Version:  >= 1.2
Description:    AMQP Library in Haskell
License:		BSD3
License-file:   LICENSE.BOTLIST
Author:         Berlin Brown
Maintainer:		berlin.brown@gmail.com
Copyright:      Copyright (C) 2008 Berlin Brown
Homepage:       http://code.google.com/p/openbotlist/
Build-Depends:  base, haskell98

Executable content
    Hs-Source-Dirs:     src src/Data/Clients
    Main-is:			ContentMain.hs
    Build-Depends:		base, haskell98, network, time, 
                        regex-compat, containers
    Other-Modules:      Data.SpiderNet.ContentMining
                        Data.SpiderNet.Bayes
