--
-- Cabal build system for AMQPTests
--
Name:           AMQPTests
Version:        0.0.1
Cabal-Version:  >= 1.2
Description:    AMQP Library in Haskell
License:		BSD3
License-file:   LICENSE.BOTLIST
Author:         Berlin Brown
Maintainer:		berlin.brown@gmail.com
Copyright:      Copyright (C) 2008 Berlin Brown
Homepage:       http://code.google.com/p/openbotlist/
Build-Depends:  base, haskell98

Library
  Hs-Source-Dirs:        ../../lib/haskell/src
  Ghc-Options:           -O2
  Build-Depends:         base, haskell98
  Exposed-modules:       AMQP.QueueClient

Executable testq
  Hs-Source-Dirs:     src/Tests/AMQP
  Main-is:            TestQueueClient.hs
  Other-Modules:      AMQP.QueueClient
